# figma-code-dl

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  install.sh
.figma/: config.toml
.github/workflows/: ci.yml  release.yml
skills/figma-to-code/: SKILL.md
src/: assets.rs  colors.rs  extract.rs  figma_url.rs  icons.rs  imports.rs  instance_map.rs  main.rs  mcp.rs  replace.rs  screenshot.rs  trim.rs  variables_dump.rs
tests/: asset_download.rs  real_sample.rs  trim.rs
