[package]
name = "figma-code-dl"
version = "0.0.4"
edition = "2024"
description = "Pull a Figma node from the local Dev Mode MCP server, post-process into a clean React+Tailwind TSX file, replace inlined instances with codebase components, and download assets locally."
authors = ["Tomokatsu Iguchi"]
license = "MIT"
repository = "https://github.com/igtm/figma-code-dl"
homepage = "https://github.com/igtm/figma-code-dl"
keywords = ["figma", "mcp", "react", "tailwind", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "figma-code-dl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
url = "2"

[profile.release]
lto = "thin"
strip = true
